--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "*.txt": "plaintext",
     "bpf_helpers.h": "c",
     "if_ether.h": "c",
-    "bpf.h": "c"
+    "bpf.h": "c",
+    "udp.h": "c"
   }
 }
