--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "bpf_helpers.h": "c",
     "if_ether.h": "c",
     "bpf.h": "c",
-    "udp.h": "c"
+    "udp.h": "c",
+    "compare": "c"
   }
 }
